@startuml

class DocumentPathExpression{

}

interface  PathSegment <<interface>> {
accept(PathSegmentVisitor)
}

class ObjectLookupPathSegment{
lookupKey
}

class ArrayLookupPathSegment{
lookupIndex
}


DocumentPathExpression *- PathSegment: segments
PathSegment <|-- ObjectLookupPathSegment
PathSegment <|-- ArrayLookupPathSegment
PathSegment <|-- ArrayAllPathSegment
@enduml
